--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "sequelize": "^5.8.12"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
